--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
         // will not use tls if the connection is not made over https
         const protocol = window.location.protocol.includes('https') ? 'wss': 'ws'
-        const ws = new WebSocket(`${protocol}://${location.host}`);
+        const ws = new WebSocket(`${protocol}://${location.host}/ws`);
 
 
         ws.onmessage = function(event) {
